--- a/.gitignore
+++ b/.gitignore
@@ -23,9 +23,5 @@ yarn-debug.log*
 yarn-error.log*
 
 #vscode
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-*.code-workspace
+.vscode/
+settings.json
