--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react-bootstrap": "^1.6.0",
     "react-countup": "^4.3.3",
     "react-dom": "^17.0.2",
+    "react-flippy": "^1.1.0",
     "react-scripts": "4.0.3",
     "react-visibility-sensor": "^5.1.1",
     "web-vitals": "^1.1.1"
