--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
     "react-bootstrap": "^1.6.0",
     "react-countup": "^4.3.3",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-social-icons": "^5.4.1",
     "react-visibility-sensor": "^5.1.1",
     "web-vitals": "^1.1.1"
   },
