--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-countup": "^4.3.3",
     "react-dom": "^17.0.2",
     "react-flippy": "^1.1.0",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-social-icons": "^5.4.1",
