--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-flippy": "^1.1.0",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.3",
     "react-social-icons": "^5.4.1",
     "react-visibility-sensor": "^5.1.1",
