--- a/package.json
+++ b/package.json
@@ -4,5 +4,13 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.13.0"
+  },
+  "scripts": {
+    "build": "cd client && npm run build",
+    "install": "cd client && npm install",
+    "start": "node server",
+    "server": "nodemon server",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   }
 }
