--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,8 @@
     
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start": "react-scripts start"
   },
  
   "eslintConfig": {
