--- a/package.json
+++ b/package.json
@@ -12,5 +12,20 @@
     "server": "nodemon server",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
-  }
+  },
+  "name": "rsvi_website",
+  "description": "git clone https://github.com/RSVI-Digital/RSVI_Website.git",
+  "version": "1.0.0",
+  "main": "server.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/RSVI-Digital/RSVI_Website.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/RSVI-Digital/RSVI_Website/issues"
+  },
+  "homepage": "https://github.com/RSVI-Digital/RSVI_Website#readme"
 }
