--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.13.0"
+    "mongoose": "^5.13.0",
+    "react-icons": "^4.2.0"
   },
   "scripts": {
     "build": "cd client && npm run build",
